# drf

./: .env  .gitignore  pyproject.toml  requirements.txt
config/: settings.py
