[tool.poetry]
name = "drf"
version = "0.1.0"
description = ""
authors = ["kwutge <kwutge@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.0"
pillow = "^9.5.0"
ipykernel = "^6.23.1"
python-dotenv = "^1.0.0"
django-extensions = "^3.2.1"
django-filter = "^23.2"
djangorestframework = "^3.14.0"
djangorestframework-jsonapi = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
